--- a/.env.local
+++ b/.env.local
@@ -1,16 +1,16 @@
 APP_NAME=skeleton
 
 DB_DRIVER=mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=hyperf
+DB_DATABASE=ushop_ucenter
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
-DB_PREFIX=
+DB_PREFIX=uc_
 
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_AUTH=(null)
 REDIS_PORT=6379
 REDIS_DB=0
