--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
         "mockery/mockery": "^1.0",
         "doctrine/common": "^2.9",
         "phpstan/phpstan": "^0.11.2",
-        "hyperf/testing": "~1.1.0"
+        "hyperf/testing": "~1.1.0",
+        "hyperf/swagger": "^1.1"
     },
     "suggest": {
         "ext-openssl": "Required to use HTTPS.",
