--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "hyperf/amqp": "~1.1.0",
         "hyperf/model-cache": "~1.1.0",
         "hyperf/elasticsearch": "~1.1.0",
-        "hyperf/tracer": "~1.1.0"
+        "hyperf/tracer": "~1.1.0",
+        "hyperf/rate-limit": "^1.1"
     },
     "require-dev": {
         "swoft/swoole-ide-helper": "^4.2",
