--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
         "phpstan/phpstan": "^0.11.2",
         "hyperf/testing": "~1.1.0",
         "hyperf/swagger": "^1.1",
-        "hyperf/swoole-tracker": "^1.1"
+        "hyperf/swoole-tracker": "^1.1",
+        "firstphp/wsdebug": "^1.1"
     },
     "suggest": {
         "ext-openssl": "Required to use HTTPS.",
