--- a/.env.local
+++ b/.env.local
@@ -8,7 +8,7 @@ DB_USERNAME=root
 DB_PASSWORD=123456
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
-DB_PREFIX=uc_
+DB_PREFIX=
 
 REDIS_HOST=redis
 REDIS_AUTH=(null)
