1. 增加助手函数 2. 日志写入文件

--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,9 @@
         "psr-4": {
             "App\\": "app/"
         },
-        "files": []
+		"files": [
+			"app/Utils/Functions.php"
+		]
     },
     "autoload-dev": {
         "psr-4": {
