--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
         "mockery/mockery": "^1.0",
         "doctrine/common": "^2.9",
         "phpstan/phpstan": "^0.11.2",
-        "hyperf/testing": "~1.1.0",
+        "hyperf/testing": "^1.1",
         "hyperf/swagger": "^1.1",
         "hyperf/swoole-tracker": "^1.1"
     },
@@ -100,7 +100,7 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "test": "co-phpunit -c phpunit.xml --colors=always",
+        "test": "vendor/bin/co-phpunit -c phpunit.xml --colors=always",
         "cs-fix": "php-cs-fixer fix $1",
         "analyze": "phpstan analyse --memory-limit 300M -l 0 -c phpstan.neon ./app ./config",
         "start": "php ./bin/hyperf.php start"
