--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "ext-json": "*",
         "ext-bcmath": "*",
         "ext-openssl": "*",
+		"ext-redis": "*",
         "hyperf/cache": "~1.1.0",
         "hyperf/command": "~1.1.0",
         "hyperf/config": "~1.1.0",
@@ -56,12 +57,12 @@
         "overtrue/wechat": "^4.2",
         "yurunsoft/yurun-oauth-login": "^2.0",
         "yurunsoft/phpmailer-swoole": "^1.0",
-        "hyperf/snowflake": "^1.1",
         "hyperf/validation": "^1.1",
         "gregwar/captcha": "^1.1",
         "firebase/php-jwt": "^5.0",
-        "hyperf/session": "^1.1"
-    },
+        "hyperf/session": "^1.1",
+        "hyperf/snowflake": "^1.1"
+	},
     "require-dev": {
         "swoft/swoole-ide-helper": "^4.2",
         "phpmd/phpmd": "^2.6",
