数据结构索引

--- a/composer.json
+++ b/composer.json
@@ -66,13 +66,13 @@
     "require-dev": {
         "swoft/swoole-ide-helper": "^4.2",
         "phpmd/phpmd": "^2.6",
-        "friendsofphp/php-cs-fixer": "^2.14",
         "mockery/mockery": "^1.0",
         "doctrine/common": "^2.9",
         "phpstan/phpstan": "^0.11.2",
         "hyperf/testing": "^1.1",
         "hyperf/swagger": "^1.1",
-        "hyperf/swoole-tracker": "^1.1"
+        "hyperf/swoole-tracker": "^1.1",
+        "friendsofphp/php-cs-fixer": "^2.16"
     },
     "suggest": {
         "ext-openssl": "Required to use HTTPS.",
