--- a/composer.json
+++ b/composer.json
@@ -104,6 +104,7 @@
         "test": "vendor/bin/co-phpunit -c phpunit.xml --colors=always",
         "cs-fix": "php-cs-fixer fix $1",
         "analyze": "phpstan analyse --memory-limit 300M -l 0 -c phpstan.neon ./app ./config",
-        "start": "php ./bin/hyperf.php start"
+        "start": "php ./bin/hyperf.php start",
+        "start-dev": "rm -rf runtime/container && php ./bin/hyperf.php start"
     }
 }
