--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "ext-bcmath": "*",
         "ext-openssl": "*",
 		"ext-redis": "*",
+        "ext-pdo": "*",
         "hyperf/cache": "~1.1.0",
         "hyperf/command": "~1.1.0",
         "hyperf/config": "~1.1.0",
@@ -60,8 +61,9 @@
         "hyperf/validation": "^1.1",
         "gregwar/captcha": "^1.1",
         "hyperf/snowflake": "^1.1",
-        "phper666/jwt-auth": "^3.0"
-	},
+        "phper666/jwt-auth": "^3.0",
+        "hyperf/db": "^1.1"
+    },
     "require-dev": {
         "swoft/swoole-ide-helper": "^4.2",
         "phpmd/phpmd": "^2.6",
