--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,7 @@ APP_NAME=skeleton
 DB_DRIVER=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=hyperf-mall
+DB_DATABASE=h_mall
 DB_USERNAME=root
 DB_PASSWORD=123456
 DB_CHARSET=utf8mb4
