--- a/composer.json
+++ b/composer.json
@@ -13,66 +13,67 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=7.2",
-        "ext-swoole": ">=4.4",
+        "ext-swoole": ">=4.5",
         "ext-json": "*",
         "ext-bcmath": "*",
         "ext-openssl": "*",
         "ext-redis": "*",
         "ext-pdo": "*",
-        "hyperf/cache": "~1.1.0",
-        "hyperf/command": "~1.1.0",
-        "hyperf/config": "~1.1.0",
-        "hyperf/contract": "~1.1.0",
-        "hyperf/database": "~1.1.0",
-        "hyperf/db-connection": "~1.1.0",
-        "hyperf/devtool": "~1.1.0",
-        "hyperf/di": "~1.1.0",
-        "hyperf/dispatcher": "~1.1.0",
-        "hyperf/event": "~1.1.0",
-        "hyperf/exception-handler": "~1.1.0",
-        "hyperf/framework": "~1.1.0",
-        "hyperf/guzzle": "~1.1.0",
-        "hyperf/http-server": "~1.1.0",
-        "hyperf/logger": "~1.1.0",
-        "hyperf/memory": "~1.1.0",
-        "hyperf/paginator": "~1.1.0",
-        "hyperf/pool": "~1.1.0",
-        "hyperf/process": "~1.1.0",
-        "hyperf/redis": "~1.1.0",
-        "hyperf/utils": "~1.1.0",
-        "hyperf/json-rpc": "~1.1.0",
-        "hyperf/rpc": "~1.1.0",
-        "hyperf/rpc-client": "~1.1.0",
-        "hyperf/rpc-server": "~1.1.0",
-        "hyperf/service-governance": "~1.1.0",
-        "hyperf/config-aliyun-acm": "~1.1.0",
-        "hyperf/constants": "~1.1.0",
-        "hyperf/async-queue": "~1.1.0",
-        "hyperf/amqp": "~1.1.0",
-        "hyperf/model-cache": "~1.1.0",
-        "hyperf/elasticsearch": "~1.1.0",
-        "hyperf/tracer": "~1.1.0",
-        "hyperf/rate-limit": "^1.1",
-        "hyperf/crontab": "^1.1",
+        "hyperf/cache": "~2.0.0",
+        "hyperf/command": "~2.0.0",
+        "hyperf/config": "~2.0.0",
+        "hyperf/contract": "~2.0.0",
+        "hyperf/database": "~2.0.0",
+        "hyperf/db-connection": "~2.0.0",
+        "hyperf/devtool": "~2.0.0",
+        "hyperf/di": "~2.0.0",
+        "hyperf/dispatcher": "~2.0.0",
+        "hyperf/event": "~2.0.0",
+        "hyperf/exception-handler": "~2.0.0",
+        "hyperf/framework": "~2.0.0",
+        "hyperf/guzzle": "~2.0.0",
+        "hyperf/http-server": "~2.0.0",
+        "hyperf/logger": "~2.0.0",
+        "hyperf/memory": "~2.0.0",
+        "hyperf/paginator": "~2.0.0",
+        "hyperf/pool": "~2.0.0",
+        "hyperf/process": "~2.0.0",
+        "hyperf/redis": "~2.0.0",
+        "hyperf/utils": "~2.0.0",
+        "hyperf/json-rpc": "~2.0.0",
+        "hyperf/rpc": "~2.0.0",
+        "hyperf/rpc-client": "~2.0.0",
+        "hyperf/rpc-server": "~2.0.0",
+        "hyperf/service-governance": "~2.0.0",
+        "hyperf/config-aliyun-acm": "~2.0.0",
+        "hyperf/constants": "~2.0.0",
+        "hyperf/async-queue": "~2.0.0",
+        "hyperf/amqp": "~2.0.0",
+        "hyperf/model-cache": "~2.0.0",
+        "hyperf/elasticsearch": "~2.0.0",
+        "hyperf/tracer": "~2.0.0",
+        "hyperf/rate-limit": "~2.0.0",
+        "hyperf/crontab": "~2.0.0",
         "yurunsoft/pay-sdk": "^2.0",
         "overtrue/wechat": "^4.2",
         "yurunsoft/yurun-oauth-login": "^2.0",
         "yurunsoft/phpmailer-swoole": "^1.0",
-        "hyperf/validation": "^1.1",
+        "hyperf/validation": "~2.0.0",
         "gregwar/captcha": "^1.1",
-        "hyperf/snowflake": "^1.1",
+        "hyperf/snowflake": "~2.0.0",
+        "hyperf/db": "~2.0.0",
         "phper666/jwt-auth": "^3.0",
-        "hyperf/db": "^1.1"
+        "hyperf/filesystem": "^2.0"
     },
     "require-dev": {
-        "swoft/swoole-ide-helper": "^4.2",
+        "swoole/ide-helper": "^4.5",
         "phpmd/phpmd": "^2.6",
         "mockery/mockery": "^1.0",
         "doctrine/common": "^2.9",
-        "phpstan/phpstan": "^0.11.2",
-        "hyperf/testing": "^1.1",
-        "hyperf/swagger": "^1.1",
-        "hyperf/swoole-tracker": "^1.1",
+        "phpstan/phpstan": "^0.12",
+        "hyperf/testing": "~2.0.0",
+        "hyperf/swagger": "~2.0.0",
+        "hyperf/swoole-tracker": "~2.0.0",
         "friendsofphp/php-cs-fixer": "^2.16"
     },
     "suggest": {
@@ -102,10 +103,13 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "test": "vendor/bin/co-phpunit -c phpunit.xml --colors=always",
+        "post-autoload-dump": [
+            "rm -rf runtime/container"
+        ],
+        "analyse": "phpstan analyse --memory-limit 300M -l 0 -c phpstan.neon ./app ./config",
         "cs-fix": "php-cs-fixer fix $1",
-        "analyze": "phpstan analyse --memory-limit 300M -l 0 -c phpstan.neon ./app ./config",
         "start": "php ./bin/hyperf.php start",
+        "test": "co-phpunit -c phpunit.xml --colors=always",
         "start-dev": "rm -rf runtime/container && php ./bin/hyperf.php start"
     }
 }
