--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,7 @@
-APP_ENV=dev
 APP_NAME=skeleton
 
 DB_DRIVER=mysql
-DB_HOST=mysql
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=h_mall
 DB_USERNAME=root
@@ -11,7 +10,7 @@ DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 DB_PREFIX=
 
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_AUTH=(null)
 REDIS_PORT=6379
 REDIS_DB=0
