公共函数文件移动

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
             "Installer\\": "installer/"
         },
         "files": [
-            "app/Helper/Functions.php"
+          "app/Core/Helper/Functions.php"
         ]
     },
     "autoload-dev": {
