--- a/composer.json
+++ b/composer.json
@@ -63,8 +63,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Installer\\": "installer/"
+            "App\\": "app/"
         },
         "files": [
           "app/Core/Helper/Functions.php"
