七牛云存储

--- a/.env.local
+++ b/.env.local
@@ -15,3 +15,10 @@ REDIS_HOST=localhost
 REDIS_AUTH=(null)
 REDIS_PORT=6379
 REDIS_DB=0
+
+# 七牛配置
+QN_ACCESS_KEY=
+QN_SECRET_KEY=
+QN_BUCKET_NAME=
+QN_DOMAIN=
+QN_PIPELINE=
