--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,9 @@
         "hyperf/translation": "~v2.0.0",
         "hyperf/crontab": "~v2.0.0",
         "hyperf/async-queue": "~v2.0.0",
-        "phper666/jwt-auth": "^3.0",
         "gregwar/captcha": "^1.1",
-        "qiniu/php-sdk": "^7.2"
+        "qiniu/php-sdk": "^7.2",
+        "phper666/jwt-auth": "^3.0"
     },
     "require-dev": {
         "swoole/ide-helper": "^4.5",
