--- a/composer.json
+++ b/composer.json
@@ -36,11 +36,11 @@
         "hyperf/rate-limit": "~2.0.0",
         "hyperf/validation": "~2.0.0",
         "hyperf/model-cache": "~2.0.0",
-        "hyperf/constants": "~v2.0.0",
-        "hyperf/paginator": "~v2.0.0",
-        "hyperf/translation": "~v2.0.0",
-        "hyperf/crontab": "~v2.0.0",
-        "hyperf/async-queue": "~v2.0.0",
+        "hyperf/constants": "~2.0.0",
+        "hyperf/paginator": "~2.0.0",
+        "hyperf/translation": "~2.0.0",
+        "hyperf/crontab": "~2.0.0",
+        "hyperf/async-queue": "~2.0.0",
         "gregwar/captcha": "^1.1",
         "qiniu/php-sdk": "^7.2",
         "phper666/jwt-auth": "^3.0"
