--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "hyperf/redis": "~2.1.0",
         "hyperf/translation": "^2.1",
         "hyperf/validation": "^2.1",
-        "phper666/jwt-auth": "^3.0",
+        "lcobucci/jwt": "^4.1",
         "qiniu/php-sdk": "^7.3"
     },
     "require-dev": {
@@ -48,6 +48,7 @@
         "fzaninotto/faker": "^1.9",
         "hyperf/devtool": "~2.1.0",
         "hyperf/testing": "~2.1.0",
+        "hyperf/watcher": "^2.1",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
         "swoole/ide-helper": "^4.5"
