添加表前缀

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
-DB_PREFIX=
+DB_PREFIX=h_
 
 REDIS_HOST=localhost
 REDIS_AUTH=(null)
