--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,7 @@
             "rm -rf runtime/container"
         ],
         "test": "co-phpunit -c phpunit.xml --colors=always",
-        "cs-fix": "php-cs-fixer fix $1",
+        "cs-fixer": "php-cs-fixer fix $1",
         "analyse": "phpstan analyse --memory-limit 300M -l 0 -c phpstan.neon ./app ./config",
         "start": [
             "Composer\\Config::disableProcessTimeout",
