--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,7 @@
         "hyperf/watcher": "~2.2.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.12",
-        "hyperf/ide-helper": "~2.2.0"
+        "swoole/ide-helper": "~4.4.7"
     },
     "suggest": {
         "ext-openssl": "Required to use HTTPS.",
