--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "friendsofphp/php-cs-fixer": "^3.0",
         "fzaninotto/faker": "^1.9",
         "hyperf/devtool": "~2.2.0",
+        "hyperf/ide-helper": "~2.2.0",
         "hyperf/testing": "~2.2.0",
         "hyperf/watcher": "~2.2.0",
         "mockery/mockery": "^1.0",
