--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,7 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=8.0",
-        "ext-bcmath": "*",
-        "ext-iconv": "*",
-        "ext-json": "*",
-        "ext-openssl": "*",
-        "ext-pdo": "*",
-        "ext-redis": "*",
-        "ext-swoole": ">=4.5",
+        "ext-swoole": ">=4.7",
         "gregwar/captcha": "^1.1",
         "hyperf/cache": "~2.2.0",
         "hyperf/command": "~2.2.0",
@@ -41,7 +35,8 @@
         "hyperf/translation": "~2.2.0",
         "hyperf/validation": "~2.2.0",
         "lcobucci/jwt": "^4.1",
-        "qiniu/php-sdk": "^7.3"
+        "qiniu/php-sdk": "^7.3",
+
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
@@ -55,6 +50,7 @@
         "swoole/ide-helper": "~4.4.7"
     },
     "suggest": {
+        "ext-bcmath": "Required to use BCMATH.",
         "ext-openssl": "Required to use HTTPS.",
         "ext-json": "Required to use JSON.",
         "ext-pdo": "Required to use MySQL Client.",
