--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": ">=8.0",
         "ext-swoole": ">=4.7",
         "ext-bcmath": "*",
+        "ext-iconv": "*",
         "gregwar/captcha": "^1.1",
         "hyperf/cache": "~2.2.0",
         "hyperf/command": "~2.2.0",
