--- a/composer.json
+++ b/composer.json
@@ -42,12 +42,10 @@
         "friendsofphp/php-cs-fixer": "^3.0",
         "fzaninotto/faker": "^1.9",
         "hyperf/devtool": "~2.2.0",
-        "hyperf/ide-helper": "~2.2.0",
         "hyperf/testing": "~2.2.0",
         "hyperf/watcher": "~2.2.0",
         "mockery/mockery": "^1.0",
-        "phpstan/phpstan": "^0.12",
-        "swoole/ide-helper": "~4.4.7"
+        "phpstan/phpstan": "^0.12"
     },
     "suggest": {
         "ext-openssl": "Required to use HTTPS.",
